# Unscented-Kalman-Filter

./: LICENSE  README.md  pyproject.toml
UKF/: constants.py  context.py  data_processor.py  logger.py  main.py  plotter.py  quaternion.py  quaternions.py  sigma_points.py  state.py  ukf.py  ukf_functions.py
launch_data/government_work_launch_1_avab/: calibration.yaml
launch_data/government_work_launch_1_nc/: calibration.yaml
launch_data/lil_frank/: calibration.yaml
launch_data/sailor/: calibration.yaml
scripts/: dp.py  profile.py  run_context.py  test_firm_usb.py  test_measurement_function.py  test_predict.py  test_update.py
