[project]
name = "Unscented-Kalman-Filter"
description = "UKF prototyping in Python"
requires-python = ">=3.13.2"
version = "1.0.0"
readme = "README.md"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyinstrument>=5.0.1",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# HATCH:
[tool.hatch.build.targets.wheel]
packages = ["UKF"]

# UV:
[tool.uv]
python-preference = "only-managed"
